--- a/AngularBase.Data/AngularBase.Data.csproj
+++ b/AngularBase.Data/AngularBase.Data.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +51,97 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdventureWorks\Address.cs" />
+    <Compile Include="AdventureWorks\AddressType.cs" />
+    <Compile Include="AdventureWorks\AdventureWorks.cs" />
+    <Compile Include="AdventureWorks\AWBuildVersion.cs" />
+    <Compile Include="AdventureWorks\BillOfMaterial.cs" />
+    <Compile Include="AdventureWorks\BusinessEntity.cs" />
+    <Compile Include="AdventureWorks\BusinessEntityAddress.cs" />
+    <Compile Include="AdventureWorks\BusinessEntityContact.cs" />
+    <Compile Include="AdventureWorks\ContactType.cs" />
+    <Compile Include="AdventureWorks\CountryRegion.cs" />
+    <Compile Include="AdventureWorks\CountryRegionCurrency.cs" />
+    <Compile Include="AdventureWorks\CreditCard.cs" />
+    <Compile Include="AdventureWorks\Culture.cs" />
+    <Compile Include="AdventureWorks\Currency.cs" />
+    <Compile Include="AdventureWorks\CurrencyRate.cs" />
+    <Compile Include="AdventureWorks\Customer.cs" />
+    <Compile Include="AdventureWorks\DatabaseLog.cs" />
+    <Compile Include="AdventureWorks\Department.cs" />
+    <Compile Include="AdventureWorks\EmailAddress.cs" />
+    <Compile Include="AdventureWorks\Employee.cs" />
+    <Compile Include="AdventureWorks\EmployeeDepartmentHistory.cs" />
+    <Compile Include="AdventureWorks\EmployeePayHistory.cs" />
+    <Compile Include="AdventureWorks\ErrorLog.cs" />
+    <Compile Include="AdventureWorks\Illustration.cs" />
+    <Compile Include="AdventureWorks\JobCandidate.cs" />
+    <Compile Include="AdventureWorks\Location.cs" />
+    <Compile Include="AdventureWorks\Password.cs" />
+    <Compile Include="AdventureWorks\Person.cs" />
+    <Compile Include="AdventureWorks\PersonCreditCard.cs" />
+    <Compile Include="AdventureWorks\PersonPhone.cs" />
+    <Compile Include="AdventureWorks\PhoneNumberType.cs" />
+    <Compile Include="AdventureWorks\Product.cs" />
+    <Compile Include="AdventureWorks\ProductCategory.cs" />
+    <Compile Include="AdventureWorks\ProductCostHistory.cs" />
+    <Compile Include="AdventureWorks\ProductDescription.cs" />
+    <Compile Include="AdventureWorks\ProductDocument.cs" />
+    <Compile Include="AdventureWorks\ProductInventory.cs" />
+    <Compile Include="AdventureWorks\ProductListPriceHistory.cs" />
+    <Compile Include="AdventureWorks\ProductModel.cs" />
+    <Compile Include="AdventureWorks\ProductModelIllustration.cs" />
+    <Compile Include="AdventureWorks\ProductModelProductDescriptionCulture.cs" />
+    <Compile Include="AdventureWorks\ProductPhoto.cs" />
+    <Compile Include="AdventureWorks\ProductProductPhoto.cs" />
+    <Compile Include="AdventureWorks\ProductReview.cs" />
+    <Compile Include="AdventureWorks\ProductSubcategory.cs" />
+    <Compile Include="AdventureWorks\ProductVendor.cs" />
+    <Compile Include="AdventureWorks\PurchaseOrderDetail.cs" />
+    <Compile Include="AdventureWorks\PurchaseOrderHeader.cs" />
+    <Compile Include="AdventureWorks\SalesOrderDetail.cs" />
+    <Compile Include="AdventureWorks\SalesOrderHeader.cs" />
+    <Compile Include="AdventureWorks\SalesOrderHeaderSalesReason.cs" />
+    <Compile Include="AdventureWorks\SalesPerson.cs" />
+    <Compile Include="AdventureWorks\SalesPersonQuotaHistory.cs" />
+    <Compile Include="AdventureWorks\SalesReason.cs" />
+    <Compile Include="AdventureWorks\SalesTaxRate.cs" />
+    <Compile Include="AdventureWorks\SalesTerritory.cs" />
+    <Compile Include="AdventureWorks\SalesTerritoryHistory.cs" />
+    <Compile Include="AdventureWorks\ScrapReason.cs" />
+    <Compile Include="AdventureWorks\Shift.cs" />
+    <Compile Include="AdventureWorks\ShipMethod.cs" />
+    <Compile Include="AdventureWorks\ShoppingCartItem.cs" />
+    <Compile Include="AdventureWorks\SpecialOffer.cs" />
+    <Compile Include="AdventureWorks\SpecialOfferProduct.cs" />
+    <Compile Include="AdventureWorks\StateProvince.cs" />
+    <Compile Include="AdventureWorks\Store.cs" />
+    <Compile Include="AdventureWorks\TransactionHistory.cs" />
+    <Compile Include="AdventureWorks\TransactionHistoryArchive.cs" />
+    <Compile Include="AdventureWorks\UnitMeasure.cs" />
+    <Compile Include="AdventureWorks\vAdditionalContactInfo.cs" />
+    <Compile Include="AdventureWorks\vEmployee.cs" />
+    <Compile Include="AdventureWorks\vEmployeeDepartment.cs" />
+    <Compile Include="AdventureWorks\vEmployeeDepartmentHistory.cs" />
+    <Compile Include="AdventureWorks\Vendor.cs" />
+    <Compile Include="AdventureWorks\vIndividualCustomer.cs" />
+    <Compile Include="AdventureWorks\vJobCandidate.cs" />
+    <Compile Include="AdventureWorks\vJobCandidateEducation.cs" />
+    <Compile Include="AdventureWorks\vJobCandidateEmployment.cs" />
+    <Compile Include="AdventureWorks\vPersonDemographic.cs" />
+    <Compile Include="AdventureWorks\vProductAndDescription.cs" />
+    <Compile Include="AdventureWorks\vProductModelCatalogDescription.cs" />
+    <Compile Include="AdventureWorks\vProductModelInstruction.cs" />
+    <Compile Include="AdventureWorks\vSalesPerson.cs" />
+    <Compile Include="AdventureWorks\vSalesPersonSalesByFiscalYear.cs" />
+    <Compile Include="AdventureWorks\vStateProvinceCountryRegion.cs" />
+    <Compile Include="AdventureWorks\vStoreWithAddress.cs" />
+    <Compile Include="AdventureWorks\vStoreWithContact.cs" />
+    <Compile Include="AdventureWorks\vStoreWithDemographic.cs" />
+    <Compile Include="AdventureWorks\vVendorWithAddress.cs" />
+    <Compile Include="AdventureWorks\vVendorWithContact.cs" />
+    <Compile Include="AdventureWorks\WorkOrder.cs" />
+    <Compile Include="AdventureWorks\WorkOrderRouting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
